@@ -35,6 +35,7 @@
 #define CONFIG_CTRL_IFACE_NAMED_PIPE
 #define CONFIG_DRIVER_NDIS
 #define CONFIG_NDIS_EVENTS_INTEGRATED
+#define CONFIG_DEBUG_FILE
 #define EAP_MD5
 #define EAP_TLS
 #define EAP_MSCHAPv2
