@@ -4,6 +4,8 @@ ChangeLog for hostapd
 	* added support for configuring and controlling multiple BSSes per
 	  radio interface (bss=<ifname> in hostapd.conf); this is only
 	  available with Devicescape and test driver interfaces
+	* fixed PMKSA cache update in the end of successful RSN
+	  pre-authentication
 
 2006-08-27 - v0.5.5
 	* added 'hostapd_cli new_sta <addr>' command for adding a new STA into
